parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> startQuad varGlobales cambiaScope declaraFunciones PR_main fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma
Rule 2     startQuad -> <empty>
Rule 3     fillMainQuad -> <empty>
Rule 4     endPrograma -> <empty>
Rule 5     cambiaScope -> <empty>
Rule 6     varGlobales -> PR_global defVariables varGlobales
Rule 7     varGlobales -> empty
Rule 8     declaraFunciones -> PR_function defFuncion declaraFunciones
Rule 9     declaraFunciones -> empty
Rule 10    defFuncion -> decTipo ID agregaFuncion TO_PAROP decParametros TO_PARCLO TO_BRACKOP mainBloque funcReturn TO_BRACKCLO endProcCuad
Rule 11    agregaFuncion -> <empty>
Rule 12    endProcCuad -> <empty>
Rule 13    decParametros -> decTipo ID meteVariable
Rule 14    decParametros -> decTipo ID meteVariable TO_COMA decParametros
Rule 15    mainBloque -> cambiaScope funcCiclos mainBloque
Rule 16    mainBloque -> funcIf mainBloque
Rule 17    mainBloque -> defVariables mainBloque
Rule 18    mainBloque -> llamadaDeFunciones mainBloque
Rule 19    mainBloque -> funcIgual mainBloque
Rule 20    mainBloque -> funcWrite mainBloque
Rule 21    mainBloque -> funcRead mainBloque
Rule 22    mainBloque -> empty
Rule 23    setMainFuncionValores -> <empty>
Rule 24    funcWrite -> PR_write TO_PAROP ID agregaWriteCuad TO_PARCLO TO_PuntoComa
Rule 25    funcRead -> PR_read TO_PAROP ID agregaReadCuad TO_PARCLO TO_PuntoComa
Rule 26    funcReturn -> PR_return TO_PAROP ID agregaReturnCuad TO_PARCLO TO_PuntoComa
Rule 27    funcIgual -> ID pushPilaVar OP_EQUALS pushPilaOp defExpresiones TO_PuntoComa agregaIgualCuad
Rule 28    funcIgual -> ID TO_CBRACKOP defExpresiones TO_CBRACKCLO OP_EQUALS defExpresiones cuadruploAsignaArr TO_PuntoComa agregaIgualCuad
Rule 29    funcCiclos -> PR_While TO_PAROP defExpresiones TO_PARCLO agregaIfCuadP1 TO_BRACKOP mainBloque agregaIfCuadP2 TO_BRACKCLO
Rule 30    funcIf -> PR_if TO_PAROP defExpresiones TO_PARCLO agregaIfCuadP1 TO_BRACKOP mainBloque TO_BRACKCLO funcElse agregaIfCuadP3
Rule 31    funcElse -> agregaIfCuadP2 PR_else TO_BRACKOP mainBloque TO_BRACKCLO
Rule 32    funcElse -> empty
Rule 33    decTipo -> PR_int
Rule 34    decTipo -> PR_float
Rule 35    decTipo -> PR_bool
Rule 36    decTipo -> PR_void
Rule 37    defVariables -> PR_int tipoVar defVar1 TO_PuntoComa
Rule 38    defVariables -> PR_float tipoVar defVar1 TO_PuntoComa
Rule 39    defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa
Rule 40    defVariables -> PR_void tipoVar defVar1 TO_PuntoComa
Rule 41    defVar1 -> variable defVar2
Rule 42    defVar1 -> arreglo defVar2
Rule 43    defVar2 -> TO_COMA defVar1
Rule 44    defVar2 -> empty
Rule 45    variable -> ID meteVariable
Rule 46    tipoVar -> empty
Rule 47    meteVariable -> empty
Rule 48    arreglo -> ID TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr
Rule 49    escribeArr -> empty
Rule 50    defExpresiones -> decExpresion
Rule 51    defExpresiones -> decExpresion PR_and pushPilaOp defExpresiones agregaAndCuad
Rule 52    defExpresiones -> decExpresion PR_or pushPilaOp defExpresiones agregaAndCuad
Rule 53    decExpresion -> miniExp
Rule 54    decExpresion -> miniExp OP_EQUALTO pushPilaOp miniExp agregaComparCuad
Rule 55    decExpresion -> miniExp OP_DIFF pushPilaOp miniExp agregaComparCuad
Rule 56    decExpresion -> miniExp OP_LESST pushPilaOp miniExp agregaComparCuad
Rule 57    decExpresion -> miniExp OP_LESSTEQ pushPilaOp miniExp agregaComparCuad
Rule 58    decExpresion -> miniExp OP_GREATT pushPilaOp miniExp agregaComparCuad
Rule 59    decExpresion -> miniExp OP_GREATTEQ pushPilaOp miniExp agregaComparCuad
Rule 60    miniExp -> microExp
Rule 61    miniExp -> microExp OP_SUBS pushPilaOp miniExp agregaSumResCuad
Rule 62    miniExp -> microExp OP_ADD pushPilaOp miniExp agregaSumResCuad
Rule 63    microExp -> micromicroExp
Rule 64    microExp -> micromicroExp OP_MULT pushPilaOp microExp agregaMultDivCuad
Rule 65    microExp -> micromicroExp OP_DIV pushPilaOp microExp agregaMultDivCuad
Rule 66    microExp -> micromicroExp OP_MOD pushPilaOp microExp agregaMultDivCuad
Rule 67    micromicroExp -> decSolucion
Rule 68    micromicroExp -> decSolucion OP_POW pushPilaOp micromicroExp agregaPowCuad
Rule 69    decSolucion -> ID pushPilaVar
Rule 70    decSolucion -> ID TO_CBRACKOP defExpresiones TO_CBRACKCLO cuadArrPush
Rule 71    decSolucion -> TO_INT agregaIntCuad
Rule 72    decSolucion -> TO_FLOAT agregaFloatCuad
Rule 73    decSolucion -> PR_true agregaBoolCuad
Rule 74    decSolucion -> PR_false agregaBoolCuad
Rule 75    decSolucion -> llamadaDeFunciones
Rule 76    decSolucion -> TO_PAROP pushPilaOp defExpresiones TO_PARCLO pushPilaOp
Rule 77    llamadaDeFunciones -> ID eraCuadruplo TO_PAROP decParamFuncs TO_PARCLO TO_PuntoComa goSubCuadruplo
Rule 78    llamadaDeFunciones -> funcionesDibuja
Rule 79    llamadaDeFunciones -> empty
Rule 80    funcionesDibuja -> PR_circulo TO_PAROP ID TO_COMA ID TO_COMA ID TO_PARCLO TO_PuntoComa circuloCuad
Rule 81    funcionesDibuja -> PR_rectangulo TO_PAROP ID TO_COMA ID TO_COMA ID TO_PARCLO TO_PuntoComa rectanguloCuad
Rule 82    funcionesDibuja -> PR_espiral TO_PAROP ID TO_COMA ID TO_COMA ID TO_PARCLO TO_PuntoComa espiralCuad
Rule 83    funcionesDibuja -> PR_estrella TO_PAROP ID TO_COMA ID TO_COMA ID TO_PARCLO TO_PuntoComa estrellaCuad
Rule 84    decParamFuncs -> ID paramCuadruplo
Rule 85    decParamFuncs -> ID paramCuadruplo TO_COMA decParamFuncs
Rule 86    decParamFuncs -> empty
Rule 87    pushPilaOp -> empty
Rule 88    pushPilaVar -> empty
Rule 89    agregaIntCuad -> empty
Rule 90    agregaFloatCuad -> empty
Rule 91    agregaBoolCuad -> empty
Rule 92    cuadArrPush -> empty
Rule 93    agregaAndCuad -> <empty>
Rule 94    agregaComparCuad -> <empty>
Rule 95    agregaSumResCuad -> <empty>
Rule 96    agregaMultDivCuad -> <empty>
Rule 97    agregaPowCuad -> <empty>
Rule 98    agregaIgualCuad -> <empty>
Rule 99    cuadruploAsignaArr -> empty
Rule 100   agregaWriteCuad -> <empty>
Rule 101   agregaReadCuad -> <empty>
Rule 102   agregaReturnCuad -> <empty>
Rule 103   agregaIfCuadP1 -> <empty>
Rule 104   agregaIfCuadP2 -> <empty>
Rule 105   agregaIfCuadP3 -> <empty>
Rule 106   WhileQuad1 -> <empty>
Rule 107   WhileQuad2 -> <empty>
Rule 108   WhileQuad3 -> <empty>
Rule 109   paramCuadruplo -> <empty>
Rule 110   eraCuadruplo -> <empty>
Rule 111   goSubCuadruplo -> <empty>
Rule 112   circuloCuad -> <empty>
Rule 113   rectanguloCuad -> <empty>
Rule 114   espiralCuad -> <empty>
Rule 115   estrellaCuad -> <empty>
Rule 116   empty -> <empty>

Terminals, with rules where they appear

ID                   : 10 13 14 24 25 26 27 28 45 48 69 70 77 80 80 80 81 81 81 82 82 82 83 83 83 84 85
OP_ADD               : 62
OP_DIFF              : 55
OP_DIV               : 65
OP_EQUALS            : 27 28
OP_EQUALTO           : 54
OP_GREATT            : 58
OP_GREATTEQ          : 59
OP_LESST             : 56
OP_LESSTEQ           : 57
OP_MOD               : 66
OP_MULT              : 64
OP_POW               : 68
OP_SUBS              : 61
PR_While             : 29
PR_and               : 51
PR_bool              : 35 39
PR_circulo           : 80
PR_else              : 31
PR_espiral           : 82
PR_estrella          : 83
PR_false             : 74
PR_float             : 34 38
PR_function          : 8
PR_global            : 6
PR_if                : 30
PR_int               : 33 37
PR_main              : 1
PR_or                : 52
PR_read              : 25
PR_rectangulo        : 81
PR_return            : 26
PR_true              : 73
PR_void              : 36 40
PR_write             : 24
TO_BRACKCLO          : 1 10 29 30 31
TO_BRACKOP           : 1 10 29 30 31
TO_CBRACKCLO         : 28 48 70
TO_CBRACKOP          : 28 48 70
TO_COMA              : 14 43 80 80 81 81 82 82 83 83 85
TO_FLOAT             : 72
TO_INT               : 48 71
TO_PARCLO            : 10 24 25 26 29 30 76 77 80 81 82 83
TO_PAROP             : 10 24 25 26 29 30 76 77 80 81 82 83
TO_PuntoComa         : 24 25 26 27 28 37 38 39 40 77 80 81 82 83
error                : 

Nonterminals, with rules where they appear

WhileQuad1           : 
WhileQuad2           : 
WhileQuad3           : 
agregaAndCuad        : 51 52
agregaBoolCuad       : 73 74
agregaComparCuad     : 54 55 56 57 58 59
agregaFloatCuad      : 72
agregaFuncion        : 10
agregaIfCuadP1       : 29 30
agregaIfCuadP2       : 29 31
agregaIfCuadP3       : 30
agregaIgualCuad      : 27 28
agregaIntCuad        : 71
agregaMultDivCuad    : 64 65 66
agregaPowCuad        : 68
agregaReadCuad       : 25
agregaReturnCuad     : 26
agregaSumResCuad     : 61 62
agregaWriteCuad      : 24
arreglo              : 42
cambiaScope          : 1 15
circuloCuad          : 80
cuadArrPush          : 70
cuadruploAsignaArr   : 28
decExpresion         : 50 51 52
decParamFuncs        : 77 85
decParametros        : 10 14
decSolucion          : 67 68
decTipo              : 10 13 14
declaraFunciones     : 1 8
defExpresiones       : 27 28 28 29 30 51 52 70 76
defFuncion           : 8
defVar1              : 37 38 39 40 43
defVar2              : 41 42
defVariables         : 6 17
empty                : 7 9 22 32 44 46 47 49 79 86 87 88 89 90 91 92 99
endProcCuad          : 10
endPrograma          : 1
eraCuadruplo         : 77
escribeArr           : 48
espiralCuad          : 82
estrellaCuad         : 83
fillMainQuad         : 1
funcCiclos           : 15
funcElse             : 30
funcIf               : 16
funcIgual            : 19
funcRead             : 21
funcReturn           : 10
funcWrite            : 20
funcionesDibuja      : 78
goSubCuadruplo       : 77
llamadaDeFunciones   : 18 75
mainBloque           : 1 10 15 16 17 18 19 20 21 29 30 31
meteVariable         : 13 14 45
microExp             : 60 61 62 64 65 66
micromicroExp        : 63 64 65 66 68
miniExp              : 53 54 54 55 55 56 56 57 57 58 58 59 59 61 62
paramCuadruplo       : 84 85
programa             : 0
pushPilaOp           : 27 51 52 54 55 56 57 58 59 61 62 64 65 66 68 76 76
pushPilaVar          : 27 69
rectanguloCuad       : 81
setMainFuncionValores : 1
startQuad            : 1
tipoVar              : 37 38 39 40
varGlobales          : 1 6
variable             : 41

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . startQuad varGlobales cambiaScope declaraFunciones PR_main fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma
    (2) startQuad -> .

    PR_global       reduce using rule 2 (startQuad -> .)
    PR_function     reduce using rule 2 (startQuad -> .)
    PR_main         reduce using rule 2 (startQuad -> .)

    programa                       shift and go to state 1
    startQuad                      shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> startQuad . varGlobales cambiaScope declaraFunciones PR_main fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma
    (6) varGlobales -> . PR_global defVariables varGlobales
    (7) varGlobales -> . empty
    (116) empty -> .

    PR_global       shift and go to state 4
    PR_function     reduce using rule 116 (empty -> .)
    PR_main         reduce using rule 116 (empty -> .)

    varGlobales                    shift and go to state 3
    empty                          shift and go to state 5

state 3

    (1) programa -> startQuad varGlobales . cambiaScope declaraFunciones PR_main fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma
    (5) cambiaScope -> .

    PR_function     reduce using rule 5 (cambiaScope -> .)
    PR_main         reduce using rule 5 (cambiaScope -> .)

    cambiaScope                    shift and go to state 6

state 4

    (6) varGlobales -> PR_global . defVariables varGlobales
    (37) defVariables -> . PR_int tipoVar defVar1 TO_PuntoComa
    (38) defVariables -> . PR_float tipoVar defVar1 TO_PuntoComa
    (39) defVariables -> . PR_bool tipoVar defVar1 TO_PuntoComa
    (40) defVariables -> . PR_void tipoVar defVar1 TO_PuntoComa

    PR_int          shift and go to state 8
    PR_float        shift and go to state 9
    PR_bool         shift and go to state 10
    PR_void         shift and go to state 11

    defVariables                   shift and go to state 7

state 5

    (7) varGlobales -> empty .

    PR_function     reduce using rule 7 (varGlobales -> empty .)
    PR_main         reduce using rule 7 (varGlobales -> empty .)


state 6

    (1) programa -> startQuad varGlobales cambiaScope . declaraFunciones PR_main fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma
    (8) declaraFunciones -> . PR_function defFuncion declaraFunciones
    (9) declaraFunciones -> . empty
    (116) empty -> .

    PR_function     shift and go to state 13
    PR_main         reduce using rule 116 (empty -> .)

    declaraFunciones               shift and go to state 12
    empty                          shift and go to state 14

state 7

    (6) varGlobales -> PR_global defVariables . varGlobales
    (6) varGlobales -> . PR_global defVariables varGlobales
    (7) varGlobales -> . empty
    (116) empty -> .

    PR_global       shift and go to state 4
    PR_function     reduce using rule 116 (empty -> .)
    PR_main         reduce using rule 116 (empty -> .)

    varGlobales                    shift and go to state 15
    empty                          shift and go to state 5

state 8

    (37) defVariables -> PR_int . tipoVar defVar1 TO_PuntoComa
    (46) tipoVar -> . empty
    (116) empty -> .

    ID              reduce using rule 116 (empty -> .)

    tipoVar                        shift and go to state 16
    empty                          shift and go to state 17

state 9

    (38) defVariables -> PR_float . tipoVar defVar1 TO_PuntoComa
    (46) tipoVar -> . empty
    (116) empty -> .

    ID              reduce using rule 116 (empty -> .)

    tipoVar                        shift and go to state 18
    empty                          shift and go to state 17

state 10

    (39) defVariables -> PR_bool . tipoVar defVar1 TO_PuntoComa
    (46) tipoVar -> . empty
    (116) empty -> .

    ID              reduce using rule 116 (empty -> .)

    tipoVar                        shift and go to state 19
    empty                          shift and go to state 17

state 11

    (40) defVariables -> PR_void . tipoVar defVar1 TO_PuntoComa
    (46) tipoVar -> . empty
    (116) empty -> .

    ID              reduce using rule 116 (empty -> .)

    tipoVar                        shift and go to state 20
    empty                          shift and go to state 17

state 12

    (1) programa -> startQuad varGlobales cambiaScope declaraFunciones . PR_main fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma

    PR_main         shift and go to state 21


state 13

    (8) declaraFunciones -> PR_function . defFuncion declaraFunciones
    (10) defFuncion -> . decTipo ID agregaFuncion TO_PAROP decParametros TO_PARCLO TO_BRACKOP mainBloque funcReturn TO_BRACKCLO endProcCuad
    (33) decTipo -> . PR_int
    (34) decTipo -> . PR_float
    (35) decTipo -> . PR_bool
    (36) decTipo -> . PR_void

    PR_int          shift and go to state 24
    PR_float        shift and go to state 25
    PR_bool         shift and go to state 26
    PR_void         shift and go to state 27

    defFuncion                     shift and go to state 22
    decTipo                        shift and go to state 23

state 14

    (9) declaraFunciones -> empty .

    PR_main         reduce using rule 9 (declaraFunciones -> empty .)


state 15

    (6) varGlobales -> PR_global defVariables varGlobales .

    PR_function     reduce using rule 6 (varGlobales -> PR_global defVariables varGlobales .)
    PR_main         reduce using rule 6 (varGlobales -> PR_global defVariables varGlobales .)


state 16

    (37) defVariables -> PR_int tipoVar . defVar1 TO_PuntoComa
    (41) defVar1 -> . variable defVar2
    (42) defVar1 -> . arreglo defVar2
    (45) variable -> . ID meteVariable
    (48) arreglo -> . ID TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr

    ID              shift and go to state 31

    defVar1                        shift and go to state 28
    variable                       shift and go to state 29
    arreglo                        shift and go to state 30

state 17

    (46) tipoVar -> empty .

    ID              reduce using rule 46 (tipoVar -> empty .)


state 18

    (38) defVariables -> PR_float tipoVar . defVar1 TO_PuntoComa
    (41) defVar1 -> . variable defVar2
    (42) defVar1 -> . arreglo defVar2
    (45) variable -> . ID meteVariable
    (48) arreglo -> . ID TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr

    ID              shift and go to state 31

    defVar1                        shift and go to state 32
    variable                       shift and go to state 29
    arreglo                        shift and go to state 30

state 19

    (39) defVariables -> PR_bool tipoVar . defVar1 TO_PuntoComa
    (41) defVar1 -> . variable defVar2
    (42) defVar1 -> . arreglo defVar2
    (45) variable -> . ID meteVariable
    (48) arreglo -> . ID TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr

    ID              shift and go to state 31

    defVar1                        shift and go to state 33
    variable                       shift and go to state 29
    arreglo                        shift and go to state 30

state 20

    (40) defVariables -> PR_void tipoVar . defVar1 TO_PuntoComa
    (41) defVar1 -> . variable defVar2
    (42) defVar1 -> . arreglo defVar2
    (45) variable -> . ID meteVariable
    (48) arreglo -> . ID TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr

    ID              shift and go to state 31

    defVar1                        shift and go to state 34
    variable                       shift and go to state 29
    arreglo                        shift and go to state 30

state 21

    (1) programa -> startQuad varGlobales cambiaScope declaraFunciones PR_main . fillMainQuad TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma
    (3) fillMainQuad -> .

    TO_BRACKOP      reduce using rule 3 (fillMainQuad -> .)

    fillMainQuad                   shift and go to state 35

state 22

    (8) declaraFunciones -> PR_function defFuncion . declaraFunciones
    (8) declaraFunciones -> . PR_function defFuncion declaraFunciones
    (9) declaraFunciones -> . empty
    (116) empty -> .

    PR_function     shift and go to state 13
    PR_main         reduce using rule 116 (empty -> .)

    declaraFunciones               shift and go to state 36
    empty                          shift and go to state 14

state 23

    (10) defFuncion -> decTipo . ID agregaFuncion TO_PAROP decParametros TO_PARCLO TO_BRACKOP mainBloque funcReturn TO_BRACKCLO endProcCuad

    ID              shift and go to state 37


state 24

    (33) decTipo -> PR_int .

    ID              reduce using rule 33 (decTipo -> PR_int .)


state 25

    (34) decTipo -> PR_float .

    ID              reduce using rule 34 (decTipo -> PR_float .)


state 26

    (35) decTipo -> PR_bool .

    ID              reduce using rule 35 (decTipo -> PR_bool .)


state 27

    (36) decTipo -> PR_void .

    ID              reduce using rule 36 (decTipo -> PR_void .)


state 28

    (37) defVariables -> PR_int tipoVar defVar1 . TO_PuntoComa

    TO_PuntoComa    shift and go to state 38


state 29

    (41) defVar1 -> variable . defVar2
    (43) defVar2 -> . TO_COMA defVar1
    (44) defVar2 -> . empty
    (116) empty -> .

    TO_COMA         shift and go to state 40
    TO_PuntoComa    reduce using rule 116 (empty -> .)

    defVar2                        shift and go to state 39
    empty                          shift and go to state 41

state 30

    (42) defVar1 -> arreglo . defVar2
    (43) defVar2 -> . TO_COMA defVar1
    (44) defVar2 -> . empty
    (116) empty -> .

    TO_COMA         shift and go to state 40
    TO_PuntoComa    reduce using rule 116 (empty -> .)

    defVar2                        shift and go to state 42
    empty                          shift and go to state 41

state 31

    (45) variable -> ID . meteVariable
    (48) arreglo -> ID . TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr
    (47) meteVariable -> . empty
    (116) empty -> .

    TO_CBRACKOP     shift and go to state 44
    TO_COMA         reduce using rule 116 (empty -> .)
    TO_PuntoComa    reduce using rule 116 (empty -> .)

    meteVariable                   shift and go to state 43
    empty                          shift and go to state 45

state 32

    (38) defVariables -> PR_float tipoVar defVar1 . TO_PuntoComa

    TO_PuntoComa    shift and go to state 46


state 33

    (39) defVariables -> PR_bool tipoVar defVar1 . TO_PuntoComa

    TO_PuntoComa    shift and go to state 47


state 34

    (40) defVariables -> PR_void tipoVar defVar1 . TO_PuntoComa

    TO_PuntoComa    shift and go to state 48


state 35

    (1) programa -> startQuad varGlobales cambiaScope declaraFunciones PR_main fillMainQuad . TO_BRACKOP setMainFuncionValores mainBloque TO_BRACKCLO endPrograma

    TO_BRACKOP      shift and go to state 49


state 36

    (8) declaraFunciones -> PR_function defFuncion declaraFunciones .

    PR_main         reduce using rule 8 (declaraFunciones -> PR_function defFuncion declaraFunciones .)


state 37

    (10) defFuncion -> decTipo ID . agregaFuncion TO_PAROP decParametros TO_PARCLO TO_BRACKOP mainBloque funcReturn TO_BRACKCLO endProcCuad
    (11) agregaFuncion -> .

    TO_PAROP        reduce using rule 11 (agregaFuncion -> .)

    agregaFuncion                  shift and go to state 50

state 38

    (37) defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .

    PR_global       reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_function     reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_main         reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_if           reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_int          reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_float        reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_bool         reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_void         reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    ID              reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_write        reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_read         reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_circulo      reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_rectangulo   reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_espiral      reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_estrella     reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_While        reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    TO_BRACKCLO     reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)
    PR_return       reduce using rule 37 (defVariables -> PR_int tipoVar defVar1 TO_PuntoComa .)


state 39

    (41) defVar1 -> variable defVar2 .

    TO_PuntoComa    reduce using rule 41 (defVar1 -> variable defVar2 .)


state 40

    (43) defVar2 -> TO_COMA . defVar1
    (41) defVar1 -> . variable defVar2
    (42) defVar1 -> . arreglo defVar2
    (45) variable -> . ID meteVariable
    (48) arreglo -> . ID TO_CBRACKOP TO_INT TO_CBRACKCLO escribeArr

    ID              shift and go to state 31

    defVar1                        shift and go to state 51
    variable                       shift and go to state 29
    arreglo                        shift and go to state 30

state 41

    (44) defVar2 -> empty .

    TO_PuntoComa    reduce using rule 44 (defVar2 -> empty .)


state 42

    (42) defVar1 -> arreglo defVar2 .

    TO_PuntoComa    reduce using rule 42 (defVar1 -> arreglo defVar2 .)


state 43

    (45) variable -> ID meteVariable .

    TO_COMA         reduce using rule 45 (variable -> ID meteVariable .)
    TO_PuntoComa    reduce using rule 45 (variable -> ID meteVariable .)


state 44

    (48) arreglo -> ID TO_CBRACKOP . TO_INT TO_CBRACKCLO escribeArr

    TO_INT          shift and go to state 52


state 45

    (47) meteVariable -> empty .

    TO_COMA         reduce using rule 47 (meteVariable -> empty .)
    TO_PuntoComa    reduce using rule 47 (meteVariable -> empty .)
    TO_PARCLO       reduce using rule 47 (meteVariable -> empty .)


state 46

    (38) defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .

    PR_global       reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_function     reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_main         reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_if           reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_int          reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_float        reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_bool         reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_void         reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    ID              reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_write        reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_read         reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_circulo      reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_rectangulo   reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_espiral      reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_estrella     reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_While        reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    TO_BRACKCLO     reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)
    PR_return       reduce using rule 38 (defVariables -> PR_float tipoVar defVar1 TO_PuntoComa .)


state 47

    (39) defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .

    PR_global       reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_function     reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_main         reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_if           reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_int          reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_float        reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_bool         reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_void         reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    ID              reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_write        reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_read         reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_circulo      reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_rectangulo   reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_espiral      reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_estrella     reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_While        reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    TO_BRACKCLO     reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)
    PR_return       reduce using rule 39 (defVariables -> PR_bool tipoVar defVar1 TO_PuntoComa .)


state 48

    (40) defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .

    PR_global       reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_function     reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_main         reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_if           reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_int          reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_float        reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_bool         reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_void         reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    ID              reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_write        reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_read         reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_circulo      reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_rectangulo   reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_espiral      reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_estrella     reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_While        reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    TO_BRACKCLO     reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)
    PR_return       reduce using rule 40 (defVariables -> PR_void tipoVar defVar1 TO_PuntoComa .)


state 49
